Wed Apr 27 11:49:41 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* A comma in invite/ban string is invalid, check for it.
	  Affected file apps/silcd/server_util.c.

Mon Apr 25 14:25:24 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Moved silcer/, silc/, silcd/ and irssi/ to apps/.  This
	  finalizes the major restructuring of the CVS tree.

Mon Apr 25 00:39:30 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Send empty MOTD reply if MOTD file cannot be read.
	  Affected file silcd/command.c.

Sun Apr 24 12:01:37 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Optimized primer number generator to use simpler conversion
	  routines.  Also assure that the prime number will have the
	  highest bit set after modifying it.  Affected file is
	  lib/silcmath/silcprimegen.c.

	* Added LibTomMath to SILC Math library (SILC_DIST_TMA).

	* Added FastTomMath to SILC Math Library (SILC_DIST_TFM),
	  for now only for testing purposes, it will not be delivered
	  in any distribution for now.

	* Removed NSS MPI from the source tree.  Due to upcoming
	  license change for the SILC Toolkit, we cannot deliver the
	  NSS MPI anymore.  I decided to replace it in all distributions
	  with public domain library.

	* Removed GNU regex from lib/contrib and introduced free
	  GNU compatible regex, lib/contrib/regexpr.[ch].  Added
	  GNU regex compatible API to it (only partial).

	* Removed getopt routines from lib/contrib.

Fri Apr 22 12:21:44 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Use silc_server_send_command_reply to send replies instead
	  of encoding packet itself.  Affected file silcd/command.c.

	* Added command sending and receiving statistics to server.
	  Affected files in silcd/.

	* GCC 4 warning fixes.  -Wno-pointer-sign option is now used
	  with GCC, for it not to warn about pointer signedness.

Tue Apr 19 11:57:35 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added context to the SilcIDCache destructor.  Affected