@@ -3,6 +3,14 @@ Wed Apr 27 11:49:41 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
 	* A comma in invite/ban string is invalid, check for it.
 	  Affected file apps/silcd/server_util.c.
 
+	* Added SERVICE command to the server.  It parses the command
+	  request but SILC Server does not support services for the
+	  time being.  Affected file apps/silcd/command.[ch].
+
+	* Added SERVICE command and command reply to client library.
+	  It is however incomplete.  Updated Toolkit documentation.
+	  Affected files are lib/silcclient/command[_reply].[ch].
+
 Mon Apr 25 14:25:24 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
 
 	* Moved silcer/, silc/, silcd/ and irssi/ to apps/.  This
